--- a/app/src/main/res/layout/fragment_advertisement.xml
+++ b/app/src/main/res/layout/fragment_advertisement.xml
@@ -7,6 +7,7 @@
               android:layout_height="match_parent">
 
   <LinearLayout
+    android:layout_marginTop="10dp"
     android:id="@+id/ll_gv"
     android:layout_gravity="center"
     android:background="@color/colorWhite"
