--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -8,24 +8,20 @@
               android:gravity="center">
 
   <FrameLayout
-    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginLeft="16dp"
-    android:paddingLeft="7dp"
-    android:paddingRight="7dp"
-    android:paddingBottom="10dp"
-    android:background="@drawable/shadow_ad"
     android:layout_gravity="center"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="224dp">
 
     <com.joooonho.SelectableRoundedImageView
       xmlns:app="http://schemas.android.com/apk/res-auto"
       app:sriv_right_top_corner_radius="8dp"
       app:sriv_left_top_corner_radius="8dp"
-      app:sriv_right_bottom_corner_radius="2dp"
-      app:sriv_left_bottom_corner_radius="2dp"
+      app:sriv_right_bottom_corner_radius="8dp"
+      app:sriv_left_bottom_corner_radius="8dp"
       app:sriv_oval="false"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -45,6 +41,9 @@
       android:background="#CCFFFFFF"
       android:id="@+id/ll_advertise_text"
       android:layout_gravity="bottom"
+      android:paddingTop="13dp"
+      android:paddingBottom="13dp"
+      android:paddingLeft="8dp"
       android:layout_width="match_parent"
       android:layout_height="72dp">
 
@@ -58,7 +57,6 @@
         app:sriv_border_width="1dp"
         android:src="#f0f0f0"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="17dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:scaleType="centerCrop"
@@ -67,13 +65,14 @@
 
       <LinearLayout
         android:orientation="vertical"
-        android:layout_marginLeft="9dp"
+        android:layout_marginLeft="8dp"
         android:layout_gravity="center_vertical"
-        android:layout_width="220dp"
-        android:layout_height="40dp">
+        android:layout_width="240dp"
+        android:layout_height="match_parent">
 
-        <TextView
-          android:textSize="20sp"
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
+          android:textSize="18sp"
           android:textColor="#333333"
           android:text="광고 타이틀 자리입니다"
           android:maxLines="1"
@@ -81,26 +80,26 @@
           android:focusable="true"
           android:ellipsize="end"
           android:layout_width="match_parent"
-          android:layout_height="25dp"
+          android:layout_height="27dp"
           android:id="@+id/tv_advertise"/>
 
-        <TextView
-          android:textSize="12sp"
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
+          android:textSize="16sp"
           android:textColor="#9B9B9B"
           android:text="company"
-          android:paddingTop="1dp"
           android:layout_width="match_parent"
-          android:layout_height="15dp"
+          android:layout_height="19dp"
           android:id="@+id/tv_companyId"/>
 
       </LinearLayout>
 
       <ImageView
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:scaleType="centerCrop"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_gravity="right"
+        android:layout_width="22dp"
+        android:layout_height="22dp"
+        android:scaleType="centerCrop"
         android:id="@+id/iv_advertiseNew"/>
 
     </LinearLayout>
