--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -22,12 +22,12 @@
       android:src="@drawable/splash_logo"/>
 
     <Button
-      android:id="@+id/btn_email_login"
+      android:id="@+id/btn_signup"
       android:layout_width="match_parent"
       android:layout_height="45dp"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
-      android:layout_marginTop="179dp"
+      android:layout_marginTop="89dp"
       android:background="@drawable/btn_email_login"/>
 
     <Button
@@ -40,66 +40,26 @@
       android:layout_marginTop="10dp"/>
 
     <LinearLayout
+      android:background="#80eeeeee"
       android:layout_width="match_parent"
-      android:layout_height="24dp"
-      android:layout_marginTop="35dp"
-      android:layout_marginLeft="32dp"
-      android:layout_marginRight="32dp"
+      android:layout_height="2dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginLeft="40dp"
+      android:layout_marginRight="40dp"
       android:orientation="horizontal"
-      android:gravity="center"
-      android:layout_below="@+id/kakao_login_btn">
-
-      <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#6d6d6d"
-        android:id="@+id/btn_srch_id"
-        android:background="@null"
-        android:ems="10"
-        android:text="아이디 찾기"
-        android:layout_weight="1"/>
-
-      <LinearLayout
-        android:layout_gravity="center"
-        android:background="#DADADA"
-        android:layout_width="1dp"
-        android:layout_height="16dp">
-
-      </LinearLayout>
-
-      <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#6d6d6d"
-        android:id="@+id/btn_srch_pw"
-        android:background="@null"
-        android:ems="10"
-        android:text="비밀번호 찾기"
-        android:layout_weight="1"/>
-
-      <LinearLayout
-        android:gravity="center"
-        android:layout_gravity="center"
-        android:background="#DADADA"
-        android:layout_width="1dp"
-        android:layout_height="16dp">
-
-      </LinearLayout>
-
-      <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="#6d6d6d"
-        android:id="@+id/btn_signup"
-        android:ems="10"
-        android:background="@null"
-        android:text="무료 회원가입"
-        android:layout_weight="1"/>
-
+      android:gravity="center">
     </LinearLayout>
+
+    <Button
+      android:id="@+id/btn_login"
+      android:layout_width="match_parent"
+      android:layout_height="45dp"
+      android:background="@drawable/btn_login_copy"
+      android:layout_marginLeft="40dp"
+      android:layout_marginRight="40dp"
+      android:layout_marginTop="10dp"
+      android:layout_marginBottom="53dp"/>
+
   </LinearLayout>
 
 </LinearLayout>
