--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,83 +29,66 @@
     android:gravity="center"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="60dp">
+    android:layout_height="59dp">
 
-    <LinearLayout
-      android:layout_marginLeft="16dp"
-      android:layout_gravity="left|center"
-      android:layout_weight="1"
-      android:id="@+id/rl_point"
-      android:gravity="left"
-      android:layout_width="match_parent"
-      android:layout_height="42dp">
+    <FrameLayout
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent">
 
-      <FrameLayout
-        android:layout_gravity="center_vertical"
-        android:id="@+id/fl_point"
+      <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
-        <Button
-          android:layout_width="wrap_content"
-          android:layout_height="match_parent"
-          android:id="@+id/btn_pointhistory"
-          android:background="@null"/>
-        <com.puzi.puzi.ui.customview.NotoTextView
-          app:fontWeight="regular"
+
+        <com.puzi.puzi.ui.customview.RobotoTextView
+          android:layout_marginLeft="16dp"
           android:gravity="center_vertical"
+          android:layout_marginRight="2.6dp"
           android:layout_gravity="center_vertical"
           android:textSize="25sp"
           android:textColor="#000000"
-          android:text="0"
+          android:text="0P"
           android:layout_width="wrap_content"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:id="@+id/tv_point"/>
-      </FrameLayout>
 
-      <com.puzi.puzi.ui.customview.NotoTextView
-        app:fontWeight="regular"
-        android:gravity="center_vertical"
-        android:layout_gravity="center_vertical"
-        android:textSize="25sp"
-        android:textColor="#000000"
-        android:text="P"
-        android:layout_width="wrap_content"
+        <ImageView
+          android:layout_marginLeft="2.8dp"
+          android:layout_gravity="center_vertical"
+          android:layout_marginRight="2.6dp"
+          android:src="@drawable/rectangle_2"
+          android:layout_width="13.3dp"
+          android:layout_height="match_parent"
+          android:paddingTop="15.85dp"
+          android:paddingBottom="15.85dp"
+          android:id="@+id/iv_todaypoint"/>
+
+        <com.puzi.puzi.ui.customview.RobotoTextView
+          android:layout_marginLeft="2.2dp"
+          android:gravity="center"
+          android:layout_gravity="center_vertical"
+          android:id="@+id/tv_todaypoint"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="0P"
+          android:textSize="16sp"
+          android:textColor="#6D6D6D"/>
+
+      </LinearLayout>
+
+      <Button
+        android:id="@+id/btn_pointhistory"
+        android:background="#00000000"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
-      <ImageView
-        android:layout_marginLeft="2.8dp"
-        android:layout_gravity="center_vertical"
-        android:src="@drawable/rectangle_2"
-        android:layout_width="13.3dp"
-        android:layout_height="match_parent"
-        android:paddingTop="15.85dp"
-        android:paddingBottom="15.85dp"
-        android:id="@+id/iv_todaypoint"/>
+    </FrameLayout>
 
-      <com.puzi.puzi.ui.customview.NotoTextView
-        app:fontWeight="regular"
-        android:layout_marginLeft="2.2dp"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"
-        android:id="@+id/tv_todaypoint"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="0"
-        android:textSize="16sp"
-        android:textColor="#6D6D6D"/>
-
-      <com.puzi.puzi.ui.customview.NotoTextView
-        app:fontWeight="regular"
-        android:layout_marginLeft="2.2dp"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="P"
-        android:textSize="16sp"
-        android:textColor="#6D6D6D"/>
-
-    </LinearLayout>
+    <LinearLayout
+      android:layout_weight="1"
+      android:gravity="left"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"/>
 
     <ImageButton
       android:gravity="right"
@@ -117,6 +100,10 @@
       android:id="@+id/ibtn_right_button"/>
 
   </LinearLayout>
+
+  <LinearLayout
+    android:background="#dadada"
+    android:layout_width="match_parent" android:layout_height="1dp"/>
 
   <com.puzi.puzi.ui.CustomViewPager
     android:id="@+id/vp_main"
