--- a/app/src/main/res/layout/fragment_advertisement_item.xml
+++ b/app/src/main/res/layout/fragment_advertisement_item.xml
@@ -8,7 +8,8 @@
               android:gravity="center">
 
   <FrameLayout
-    android:layout_marginBottom="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginBottom="8dp"
     android:layout_marginRight="16dp"
     android:layout_marginLeft="16dp"
     android:layout_gravity="center"
