--- a/app/src/main/res/values/values.xml
+++ b/app/src/main/res/values/values.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <declare-styleable name="NotoTextView">
-    <attr name="fontWeight" format="enum">
-      <enum name="thin" value="0" />
-      <enum name="light" value="1" />
-      <enum name="demilight" value="2" />
-      <enum name="regular" value="3" />
-      <enum name="medium" value="4" />
-      <enum name="bold" value="5" />
-      <enum name="black" value="6" />
-    </attr>
+    <attr name="fontWeight"/>
   </declare-styleable>
+
+  <declare-styleable name="NotoButton">
+    <attr name="fontWeight"/>
+  </declare-styleable>
+
+  <declare-styleable name="NotoEditText">
+    <attr name="fontWeight"/>
+  </declare-styleable>
+
+  <attr name="fontWeight" format="enum">
+    <enum name="thin" value="0" />
+    <enum name="light" value="1" />
+    <enum name="demilight" value="2" />
+    <enum name="regular" value="3" />
+    <enum name="medium" value="4" />
+    <enum name="bold" value="5" />
+    <enum name="black" value="6" />
+  </attr>
+
 </resources>
