--- a/app/src/main/res/layout/fragment_channel_detail.xml
+++ b/app/src/main/res/layout/fragment_channel_detail.xml
@@ -68,7 +68,7 @@
       <ImageButton
         android:layout_width="match_parent"
         android:layout_height="248dp"
-        android:src="@drawable/default_img"
+        android:src="@drawable/basic_picture_preview"
         android:background="#00000000"
         android:scaleType="centerCrop"
         android:id="@+id/ibtn_chanenl_detail_picture"
