--- a/app/src/main/res/layout/activity_store_item.xml
+++ b/app/src/main/res/layout/activity_store_item.xml
@@ -74,6 +74,7 @@
     android:layout_marginEnd="8dp"
     android:numColumns="2"
     android:scrollbars="none"
+    android:background="#00000000"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>
 
