--- a/app/src/main/res/layout/fragment_setting_detail.xml
+++ b/app/src/main/res/layout/fragment_setting_detail.xml
@@ -9,7 +9,7 @@
     android:id="@+id/fl_signup"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="54dp">
+    android:layout_height="53dp">
 
     <ImageButton
       android:padding="16dp"
@@ -20,7 +20,8 @@
       android:src="@drawable/back"
       android:id="@+id/ibtn_back_setting"/>
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:textSize="20sp"
       android:textColor="#333333"
       android:id="@+id/tv_setting_title"
@@ -28,6 +29,11 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"/>
   </FrameLayout>
+
+  <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="1dp"
+    android:background="#dadada"/>
 
   <LinearLayout
     android:id="@+id/ll_setting_content"
