--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -2,64 +2,69 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:background="@null"
+              android:background="@drawable/bg_main"
               android:orientation="vertical" >
 
-  <LinearLayout
-    android:background="@drawable/bg_main"
-    android:orientation="vertical"
+  <ImageView
+    android:layout_gravity="center"
+    android:layout_marginTop="105dp"
+    android:layout_width="125dp"
+    android:layout_height="125dp"
+    android:id="@+id/ibtn_bi"
+    android:layout_marginBottom="40dp"
+    android:background="#00000000"
+    android:src="@drawable/splash_logo"/>
+
+  <FrameLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <ImageView
-      android:layout_gravity="center"
-      android:layout_marginTop="105dp"
-      android:layout_width="125dp"
-      android:layout_height="125dp"
-      android:id="@+id/ibtn_bi"
-      android:layout_marginBottom="40dp"
-      android:background="#00000000"
-      android:src="@drawable/splash_logo"/>
-
-    <Button
-      android:id="@+id/btn_signup"
-      android:layout_width="match_parent"
-      android:layout_height="45dp"
-      android:layout_marginLeft="40dp"
-      android:layout_marginRight="40dp"
-      android:layout_marginTop="89dp"
-      android:background="@drawable/btn_email_login"/>
-
-    <Button
-      android:id="@+id/btn_kakao_login"
-      android:layout_width="match_parent"
-      android:layout_height="45dp"
-      android:background="@drawable/btn_kakao_login"
-      android:layout_marginLeft="40dp"
-      android:layout_marginRight="40dp"
-      android:layout_marginTop="10dp"/>
+    android:layout_height="match_parent">
 
     <LinearLayout
-      android:background="#80eeeeee"
+      android:layout_marginBottom="53dp"
+      android:layout_gravity="bottom"
+      android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="2dp"
-      android:layout_marginTop="10dp"
-      android:layout_marginLeft="40dp"
-      android:layout_marginRight="40dp"
-      android:orientation="horizontal"
-      android:gravity="center">
+      android:layout_height="wrap_content">
+
+      <Button
+        android:id="@+id/btn_signup"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:background="@drawable/btn_email_login"/>
+
+      <Button
+        android:id="@+id/btn_kakao_login"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/btn_kakao_login"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="10dp"/>
+
+      <LinearLayout
+        android:background="#80eeeeee"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:orientation="horizontal"
+        android:gravity="center">
+      </LinearLayout>
+
+      <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:background="@drawable/btn_login_copy"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginTop="10dp"/>
+
     </LinearLayout>
 
-    <Button
-      android:id="@+id/btn_login"
-      android:layout_width="match_parent"
-      android:layout_height="45dp"
-      android:background="@drawable/btn_login_copy"
-      android:layout_marginLeft="40dp"
-      android:layout_marginRight="40dp"
-      android:layout_marginTop="10dp"
-      android:layout_marginBottom="53dp"/>
-
-  </LinearLayout>
+  </FrameLayout>
 
 </LinearLayout>
