--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <color name="colorPrimary">#f1f1f1</color>
-  <color name="colorPrimaryDark">#f1f1f1</color>
+  <color name="colorPrimaryDark">#6d6d6d</color>
   <color name="colorAccent">#FF4081</color>
+  <color name="colorControlHighlight">#fafafa</color>
 
   <color name="colorNavy">#18304f</color>
   <color name="colorWhite">#FFFFFF</color>
