--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -14,7 +14,7 @@
     android:padding="0dp"
     android:layout_marginTop="7dp"
     android:layout_marginBottom="7dp"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -23,7 +23,7 @@
 
     <LinearLayout
       android:orientation="vertical"
-      android:layout_width="156dp"
+      android:layout_width="match_parent"
       android:layout_height="match_parent">
 
       <com.joooonho.SelectableRoundedImageView
