--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -11,7 +11,7 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:orientation="horizontal"
-    android:layout_width="328dp"
+    android:layout_width="match_parent"
     android:layout_height="93dp">
 
     <com.joooonho.SelectableRoundedImageView
