--- a/app/src/main/res/layout/item_store_item.xml
+++ b/app/src/main/res/layout/item_store_item.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@drawable/button_store_item"
     android:layout_margin="8dp"
-    android:layout_width="156dp"
+    android:layout_width="match_parent"
     android:layout_height="200dp">
 
     <ImageView
@@ -17,7 +17,7 @@
       android:layout_marginEnd="9dp"
       android:layout_marginBottom="4dp"
       android:scaleType="fitCenter"
-      android:layout_width="138dp"
+      android:layout_width="match_parent"
       android:layout_height="104dp"
       android:src="@mipmap/home"
       android:id="@+id/iv_store_item_preview"/>
