--- a/app/src/main/res/layout/activity_channel_filter.xml
+++ b/app/src/main/res/layout/activity_channel_filter.xml
@@ -28,7 +28,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_back"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="medium"
           android:text="채널 필터링"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
@@ -54,7 +55,8 @@
         android:background="#dadada"
         android:layout_height="1dp"/>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:text="성별"
         android:layout_marginLeft="31dp"
         android:layout_marginTop="19dp"
@@ -79,7 +81,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_male"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="남성"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -97,7 +100,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_female"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="여성"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -108,7 +112,8 @@
 
       </LinearLayout>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:text="나이"
         android:layout_marginLeft="31dp"
         android:layout_marginTop="25dp"
@@ -133,7 +138,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_10"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="10대"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -151,7 +157,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_20"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="20대"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -178,7 +185,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_30"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="30대"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -196,7 +204,8 @@
           android:background="#00000000"
           android:id="@+id/ibtn_channel_filter_40"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:text="40대"
           android:layout_marginLeft="12dp"
           android:layout_gravity="center_vertical"
@@ -207,7 +216,8 @@
 
       </LinearLayout>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="medium"
         android:text="관심사"
         android:layout_marginLeft="32dp"
         android:layout_marginTop="28dp"
@@ -224,7 +234,8 @@
         android:layout_marginRight="32dp"
         android:layout_height="54dp">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="뷰티"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -235,7 +246,8 @@
           android:id="@+id/btn_channel_filter_beauty"
           android:layout_weight="1"/>
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="쇼핑"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -254,7 +266,8 @@
         android:layout_marginRight="32dp"
         android:layout_height="54dp" android:layout_weight="1">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="외식"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -265,7 +278,8 @@
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="여행\n(항공,호텔)"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -284,7 +298,8 @@
         android:layout_marginRight="32dp"
         android:layout_height="54dp">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="문화\n(콘서트,공연)"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -296,7 +311,8 @@
           android:background="@drawable/button_favorite_off"
           android:layout_weight="1"/>
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="게임"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -315,7 +331,8 @@
         android:layout_marginRight="32dp"
         android:layout_height="54dp">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:text="금융\n(보험,재테크)"
           android:layout_width="0dp"
           android:layout_height="match_parent"
@@ -332,7 +349,8 @@
           android:layout_height="match_parent"/>
       </LinearLayout>
 
-      <Button
+      <com.puzi.puzi.ui.customview.NotoButton
+        app:fontWeight="medium"
         android:text="선택완료"
         android:layout_width="match_parent"
         android:layout_height="54dp"
@@ -346,11 +364,5 @@
         android:id="@+id/btn_channel_filter_confirm"/>
     </LinearLayout>
   </ScrollView>
-
-  <!-- 성별 -->
-
-  <!-- 연령대 -->
-
-  <!-- 관심사 -->
 
 </LinearLayout>
