--- a/app/src/main/res/layout/activity_company.xml
+++ b/app/src/main/res/layout/activity_company.xml
@@ -43,7 +43,7 @@
             android:scaleType="centerCrop"
             android:id="@+id/iv_companyProfile_picture"/>
 
-          <TextView
+          <com.puzi.puzi.ui.customview.RobotoTextView
             android:id="@+id/tv_companyName"
             android:gravity="center"
             android:textSize="20sp"
@@ -54,7 +54,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-          <TextView
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="regular"
             android:id="@+id/tv_companyComment"
             android:gravity="center"
             android:textSize="12sp"
@@ -63,7 +64,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-          <Button
+          <com.puzi.puzi.ui.customview.NotoButton
+            app:fontWeight="light"
             android:layout_width="80dp"
             android:layout_height="22dp"
             android:gravity="center"
@@ -132,7 +134,8 @@
           android:visibility="invisible"
           android:id="@+id/iv_title_companyProfile_picture"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="regular"
           android:id="@+id/tv_title_companyName"
           android:gravity="center"
           android:layout_marginLeft="3dp"
@@ -167,7 +170,8 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content">
 
-        <Button
+        <com.puzi.puzi.ui.customview.NotoButton
+          app:fontWeight="regular"
           android:id="@+id/btn_profile_channel_dropdown_block"
           android:text="차단하기"
           android:textColor="#333333"
