--- a/app/src/main/res/layout/activity_store_item.xml
+++ b/app/src/main/res/layout/activity_store_item.xml
@@ -26,7 +26,8 @@
       android:id="@+id/btn_store_item_back"
       android:backgroundTint="#000000"/>
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:id="@+id/tv_store_item_title"
       android:gravity="center"
       android:layout_marginEnd="37dp"
@@ -56,7 +57,8 @@
       android:src="@drawable/button_puzi"
       android:id="@+id/iv_store_item_logo"/>
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:text="TextView"
       android:layout_marginStart="8dp"
       android:layout_marginTop="20dp"
