--- a/app/src/main/res/layout/activity_store_purchase.xml
+++ b/app/src/main/res/layout/activity_store_purchase.xml
@@ -37,7 +37,8 @@
             android:id="@+id/btn_store_purchase_back"
             android:backgroundTint="#000000"/>
 
-          <TextView
+          <com.puzi.puzi.ui.customview.NotoTextView
+            app:fontWeight="medium"
             android:id="@+id/tv_store_purchase_title"
             android:gravity="center"
             android:layout_marginEnd="37dp"
@@ -175,7 +176,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
               android:text="상품설명"
               android:layout_width="52dp"
               android:layout_height="wrap_content"
@@ -184,7 +186,8 @@
               android:textColor="#6d6d6d"
               android:id="@+id/textView10"/>
 
-            <TextView
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="demilight"
               android:text="text"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
@@ -204,7 +207,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="medium"
               android:text="유효기간"
               android:layout_width="52dp"
               android:layout_height="wrap_content"
@@ -213,7 +217,8 @@
               android:textColor="#6d6d6d"
               android:id="@+id/textView10"/>
 
-            <TextView
+            <com.puzi.puzi.ui.customview.NotoTextView
+              app:fontWeight="demilight"
               android:text="TextView"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
@@ -230,7 +235,8 @@
 
     </ScrollView>
 
-    <Button
+    <com.puzi.puzi.ui.customview.NotoButton
+      app:fontWeight="bold"
       android:layout_gravity="bottom"
       android:background="@color/colorPuzi"
       android:text="구매하기"
