--- a/app/src/main/res/layout/dialog_channel_evaluate.xml
+++ b/app/src/main/res/layout/dialog_channel_evaluate.xml
@@ -12,7 +12,8 @@
     android:background="#ffffff"
     android:orientation="vertical">
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:id="@+id/dialog_edittext_tvTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -81,7 +82,8 @@
 
     </LinearLayout>
 
-    <TextView
+    <com.puzi.puzi.ui.customview.NotoTextView
+      app:fontWeight="medium"
       android:id="@+id/dialog_edittext_tvTitle"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -93,7 +95,8 @@
       android:lineSpacingExtra="-1sp"
       android:text="평가입력"/>
 
-    <EditText
+    <com.puzi.puzi.ui.customview.NotoEditText
+      app:fontWeight="regular"
       android:id="@+id/et_dialog_channel_evaluate_comment"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
@@ -112,7 +115,7 @@
       android:inputType="textMultiLine">
 
       <requestFocus/>
-    </EditText>
+    </com.puzi.puzi.ui.customview.NotoEditText>
 
     <LinearLayout
       android:layout_width="match_parent"
@@ -122,7 +125,8 @@
       android:layout_gravity="center"
       android:orientation="horizontal">
 
-      <Button
+      <com.puzi.puzi.ui.customview.NotoButton
+        app:fontWeight="regular"
         android:id="@+id/dialog_edittext_btnCancel"
         android:layout_width="0dp"
         android:layout_marginLeft="20dp"
@@ -133,7 +137,8 @@
         android:text="취소"
         android:textColor="@color/colorPuzi"/>
 
-      <Button
+      <com.puzi.puzi.ui.customview.NotoButton
+        app:fontWeight="regular"
         android:id="@+id/btn_dialog_channel_evaluate_confirm"
         android:layout_width="0dp"
         android:layout_height="match_parent"
