--- a/app/src/main/res/layout/item_channel_detail_editors_page.xml
+++ b/app/src/main/res/layout/item_channel_detail_editors_page.xml
@@ -17,7 +17,8 @@
     android:background="#00000000"
     android:id="@+id/iv_item_channel_detail_editors_page_image"/>
 
-  <TextView
+  <com.puzi.puzi.ui.customview.NotoTextView
+    app:fontWeight="medium"
     android:text="title"
     android:layout_width="176dp"
     android:layout_height="wrap_content"
@@ -25,17 +26,18 @@
     android:layout_marginTop="8dp"
     android:maxLines="1"
     android:ellipsize="end"
-    android:textSize="16sp"
+    android:textSize="15sp"
     android:textColor="#35343d"
     android:id="@+id/tv_item_channel_detail_editors_page_title"/>
 
-  <TextView
+  <com.puzi.puzi.ui.customview.NotoTextView
+    app:fontWeight="light"
     android:text="name"
     android:layout_width="176dp"
     android:layout_height="wrap_content"
     android:layout_marginLeft="8dp"
-    android:textSize="12sp"
-    android:textColor="#9b9b9b"
+    android:textSize="13sp"
+    android:textColor="#6d6d6d"
     android:id="@+id/tv_item_channel_detail_editors_page_name"/>
 
 </LinearLayout>
