--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
+              xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:padding="0dp"
               android:layout_margin="0dp"
@@ -39,7 +39,8 @@
         android:id="@+id/ibtn_item_channel_image_1"
         android:background="#00000000"/>
 
-      <Button
+      <com.puzi.puzi.ui.customview.NotoButton
+        app:fontWeight="regular"
         android:focusable ="false"
         android:text="title"
         android:textSize="10sp"
@@ -54,7 +55,8 @@
         android:gravity="left"
         android:id="@+id/tv_item_channel_company_name_1"/>
 
-      <Button
+      <com.puzi.puzi.ui.customview.NotoButton
+        app:fontWeight="medium"
         android:focusable ="false"
         android:text="title"
         android:textSize="15sp"
