--- a/app/src/main/res/layout/item_channel_list_editorspage.xml
+++ b/app/src/main/res/layout/item_channel_list_editorspage.xml
@@ -35,7 +35,8 @@
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-      <TextView
+      <com.puzi.puzi.ui.customview.NotoTextView
+        app:fontWeight="regular"
         android:text="title"
         android:layout_width="match_parent"
         android:layout_height="44dp"
@@ -51,7 +52,7 @@
         android:layout_marginBottom="10.6dp"
         android:id="@+id/tv_item_channel_editor_title"/>
 
-      <TextView
+      <com.puzi.puzi.ui.customview.RobotoTextView
         android:text="name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
