--- a/app/src/main/res/layout/item_store_brand_single.xml
+++ b/app/src/main/res/layout/item_store_brand_single.xml
@@ -14,7 +14,8 @@
     android:layout_gravity="center_horizontal"
     android:id="@+id/iv_item_store_brand_single"/>
 
-  <TextView
+  <com.puzi.puzi.ui.customview.NotoTextView
+    app:fontWeight="regular"
     android:text="TextView"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
