--- a/app/src/main/res/layout/item_channel_list_channel.xml
+++ b/app/src/main/res/layout/item_channel_list_channel.xml
@@ -58,7 +58,7 @@
       <com.puzi.puzi.ui.customview.NotoButton
         app:fontWeight="medium"
         android:focusable ="false"
-        android:text="title"
+        android:text="title\n안녕"
         android:textSize="15sp"
         android:textColor="#333333"
         android:layout_marginTop="3dp"
@@ -67,7 +67,7 @@
         android:ellipsize="end"
         android:background="#00000000"
         android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="46dp"
         android:gravity="left"
         android:id="@+id/tv_item_channel_title_1"/>
 
@@ -114,7 +114,8 @@
           android:src="@drawable/star"
           android:id="@+id/iv_item_channel_company_star_5"/>
 
-        <TextView
+        <com.puzi.puzi.ui.customview.NotoTextView
+          app:fontWeight="demilight"
           android:layout_gravity="center_vertical"
           android:text="5.0/5.0"
           android:textSize="12sp"
